feat: pessimistic lock